[edit] add uncategorized group

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 
                 <div class="toolbar__section">
                     <button class="btn-group" data-group="famille" data-lang-fr="famille" data-lang-en="family">famille</button>
-                    <button class="btn-group" data-group="collegue" data-lang-fr="collègues" data-lang-en="coworker">collègues</button>
-                    <button class="btn-group" data-group="collaborateur" data-lang-fr="collaborateur" data-lang-en="colleagues">collaborateurs</button>
-                    <!-- <button class="btn-group" data-group="contemporain" data-lang-fr="contemporains" data-lang-en="contemporaries">contemporains</button> -->
-                    <button class="btn-group" data-group="opposant" data-lang-fr="opposants" data-lang-en="rival">opposants</button>
+                    <button class="btn-group" data-group="collegue" data-lang-fr="collègues" data-lang-en="coworkers">collègues</button>
+                    <button class="btn-group" data-group="collaborateur" data-lang-fr="collaborateurs" data-lang-en="colleagues">collaborateurs</button>
+                    <button class="btn-group" data-group="opposant" data-lang-fr="opposants" data-lang-en="rivals">opposants</button>
+                    <button class="btn-group" data-group="non-catégorisé" data-lang-fr="non-classé" data-lang-en="uncategorized">non-classé</button>
                 </div>
 
                 <div class="toolbar__section">
@@ -242,10 +242,10 @@
     
                 <div>
                     <button class="btn-group btn-group--large" data-group="famille" data-lang-fr="famille" data-lang-en="family">famille</button>
-                    <button class="btn-group btn-group--large" data-group="collegue" data-lang-fr="collègues" data-lang-en="coworker">collègues</button>
-                    <button class="btn-group btn-group--large" data-group="collaborateur" data-lang-fr="collaborateur" data-lang-en="colleagues">collaborateurs</button>
-                    <button class="btn-group btn-group--large" data-group="contemporain" data-lang-fr="contemporains" data-lang-en="contemporaries">contemporains</button>
-                    <button class="btn-group btn-group--large" data-group="opposant" data-lang-fr="opposants" data-lang-en="rival">opposants</button>
+                    <button class="btn-group btn-group--large" data-group="collegue" data-lang-fr="collègues" data-lang-en="coworkers">collègues</button>
+                    <button class="btn-group btn-group--large" data-group="collaborateur" data-lang-fr="collaborateurs" data-lang-en="colleagues">collaborateurs</button>
+                    <button class="btn-group btn-group--large" data-group="opposant" data-lang-fr="opposants" data-lang-en="rivals">opposants</button>
+                    <button class="btn-group btn-group--large" data-group="non-catégorisé" data-lang-fr="non-classé" data-lang-en="uncategorized">non-classé</button>
                 </div>
     
                 <div>
