[add] btn permalink

--- a/index.html
+++ b/index.html
@@ -298,6 +298,8 @@
                     <span class="connexions__libelle" data-lang-fr="Connexions" data-lang-en="Connections">Connexions</span>
                     <div id="fiche-connexion"></div>
                 </div>
+
+                <button id="fiche-permalien" class="fiche__permalien" data-lang-fr="Copier le premalien de l'entité" data-lang-en="Copy the entity permalink">Copier le premalien de l'entité</button>
             </main>
         </aside>
 
