--- a/index.html
+++ b/index.html
@@ -277,7 +277,10 @@
                         <span id="fiche-meta-label" class="fiche__label"></span>
                         <div id="fiche-meta-date"></div>
                         <div id="fiche-meta-titre" class="fiche__titre"></div>
-                        <a id="fiche-wiki-link" class="fiche__wiki-link" title="Page wikipédia liée" target="_blank" href=""></a>
+                        <div class="d-flex justify-content-between">
+                            <a id="fiche-wiki-link" class="fiche__wiki-link" title="Page wikipédia liée" target="_blank" href=""></a>
+                            <button id="fiche-permalien" class="fiche__permalien" data-lang-fr="Permalien" data-lang-en="Permalink">Permalien</button>
+                        </div>
                     </div>
                 </div>
     
@@ -298,8 +301,6 @@
                     <span class="connexions__libelle" data-lang-fr="Connexions" data-lang-en="Connections">Connexions</span>
                     <div id="fiche-connexion"></div>
                 </div>
-
-                <button id="fiche-permalien" class="fiche__permalien" data-lang-fr="Copier le premalien de l'entité" data-lang-en="Copy the entity permalink">Copier le premalien de l'entité</button>
             </main>
         </aside>
 
