[add] doc about the web server

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 </header>
     
                 <main class="modal__content || d-flex flex-wrap justify-content-center mt-3" id="modal-about-content">
-                    <img class="about__img-otlet || col-md-4" src="/assets/photos/OtletPaulColorized.png" alt="">
+                    <img class="about__img-otlet || col-md-4" src="./assets/photos/OtletPaulColorized.png" alt="">
     
                     <div class="about__texte || col-md-6">
                         <h2 data-lang-fr="À propos" data-lang-en="About">À propos</h2>
