--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
 
                 <div class="toolbar__section">
-                    <button class="btn-group" data-group="œuvre" data-lang-fr="œuvres" data-lang-en="œuvres">œuvres</button>
+                    <button class="btn-group" data-group="œuvre" data-lang-fr="œuvres" data-lang-en="works">œuvres</button>
                     <button class="btn-group" data-group="évènement" data-lang-fr="évènement" data-lang-en="events">évènements</button>
                     <button class="btn-group" data-group="institution" data-lang-fr="institutions" data-lang-en="institutions">institutions</button>
                 </div>
