[edit] translate instruction by data- on buttons

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </ul>
                 <div class="d-flex align-items-baseline">
                     <div class="lang-box">
-                        <div id="lang-fr" data-lang="Fr" class="lang-box__flag lang-box__flag--fr">FR</div>
+                        <div id="lang-fr" data-lang="Fr" data-active="true" class="lang-box__flag lang-box__flag--fr">FR</div>
                         <span class="lang-box__separator">/</span>
                         <div id="lang-en" data-lang="En" class="lang-box__flag lang-box__flag--en">EN</div>
                     </div>
