--- a/index.html
+++ b/index.html
@@ -149,8 +149,6 @@
                         <div data-lang="Fr" data-active="true" class="lang-box__flag lang-box__flag--fr">FR</div>
                         <span class="lang-box__separator">/</span>
                         <div data-lang="En" class="lang-box__flag lang-box__flag--en">EN</div>
-                        <span class="lang-box__separator">/</span>
-                        <div data-lang="Ru" class="lang-box__flag lang-box__flag--en">RU</div>
                     </div>
         
                     <button id="about-btn" class="navigation__link" data-lang-fr="À propos" data-lang-en="About">À propos</button>
@@ -164,7 +162,7 @@
                 </div>
 
                 <div class="toolbar__section">
-                    <button class="btn-group" data-type="group" data-meta="famille" data-lang-fr="famille" data-lang-en="family" data-lang-ru="TA MERE">famille</button>
+                    <button class="btn-group" data-type="group" data-meta="famille" data-lang-fr="famille" data-lang-en="family">famille</button>
                     <button class="btn-group" data-type="group" data-meta="collegue" data-lang-fr="collègues" data-lang-en="coworkers">collègues</button>
                     <button class="btn-group" data-type="group" data-meta="collaborateur" data-lang-fr="collaborateurs" data-lang-en="colleagues">collaborateurs</button>
                     <button class="btn-group" data-type="group" data-meta="opposant" data-lang-fr="opposants" data-lang-en="rivals">opposants</button>
