[fix] package.json

--- a/index.html
+++ b/index.html
@@ -237,15 +237,15 @@
             <button id="filtre-close" data-lang-fr="Fermer" data-lang-en="Close">Fermer</button>
 
             <main>
-                <button class="btn-group btn-group--large" data-type="group" data-meta="otlet" data-lang-fr="Otlet" data-lang-en="Otlet">Otlet</button>
-                <button class="btn-group btn-group--large" data-type="group" data-meta="famille" data-lang-fr="famille" data-lang-en="family">famille</button>
-                <button class="btn-group btn-group--large" data-type="group" data-meta="collegue" data-lang-fr="collègues" data-lang-en="coworkers">collègues</button>
-                <button class="btn-group btn-group--large" data-type="group" data-meta="collaborateur" data-lang-fr="collaborateurs" data-lang-en="colleagues">collaborateurs</button>
-                <button class="btn-group btn-group--large" data-type="group" data-meta="opposant" data-lang-fr="opposants" data-lang-en="rivals">opposants</button>
-                <button class="btn-group btn-group--large" data-type="group" data-meta="non-catégorisé" data-lang-fr="non-classé" data-lang-en="uncategorized">non-classé</button>
-                <button class="btn-group btn-group--large" data-type="group" data-meta="œuvre" data-lang-fr="œuvres" data-lang-en="œuvres">œuvres</button>
-                <button class="btn-group btn-group--large" data-type="group" data-meta="évènement" data-lang-fr="évènement" data-lang-en="events">évènements</button>
-                <button class="btn-group btn-group--large" data-type="group" data-meta="institution" data-lang-fr="institutions" data-lang-en="institutions">institutions</button>
+                <button class="btn-group" data-type="group" data-meta="otlet" data-lang-fr="Otlet" data-lang-en="Otlet">Otlet</button>
+                <button class="btn-group" data-type="group" data-meta="famille" data-lang-fr="famille" data-lang-en="family">famille</button>
+                <button class="btn-group" data-type="group" data-meta="collegue" data-lang-fr="collègues" data-lang-en="coworkers">collègues</button>
+                <button class="btn-group" data-type="group" data-meta="collaborateur" data-lang-fr="collaborateurs" data-lang-en="colleagues">collaborateurs</button>
+                <button class="btn-group" data-type="group" data-meta="opposant" data-lang-fr="opposants" data-lang-en="rivals">opposants</button>
+                <button class="btn-group" data-type="group" data-meta="non-catégorisé" data-lang-fr="non-classé" data-lang-en="uncategorized">non-classé</button>
+                <button class="btn-group" data-type="group" data-meta="œuvre" data-lang-fr="œuvres" data-lang-en="œuvres">œuvres</button>
+                <button class="btn-group" data-type="group" data-meta="évènement" data-lang-fr="évènement" data-lang-en="events">évènements</button>
+                <button class="btn-group" data-type="group" data-meta="institution" data-lang-fr="institutions" data-lang-en="institutions">institutions</button>
             </main>
         </aside>
 
