--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             <button id="filtre-open" class="filter-volet-btn || d-xl-none" title="Afficher les fitres"></button>
 
             <div id="network" class="network"></div>
+            <svg id="graph"></svg>
 
             <div class="command-board">
                 <div class="zoom-box">
@@ -365,6 +366,7 @@
     -->
 
     <!-- LIBRAIRIES JS -->
+    <script src="./libs/d3.js"></script>
     <script src="./libs/vis-network.min.js"></script>
     <script src="./libs/fuse.min.js"></script>
     <script src="./libs/micromodal.min.js"></script>
